Closed Bug 1147908 Opened 8 years ago Closed 8 years ago

IonMonkey MIPS: Fix UDiv and UMod (bug1122401.js failure)

Categories

(Core :: JavaScript Engine: JIT, defect)

Other
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla39
Tracking Status
firefox39 --- fixed

People

(Reporter: hev, Assigned: hev)

Details

Attachments

(1 file)

[heiher@arch-x86 jit-test]$ python2 ./jit_test.py -f --tbpl ../mips/js/src/shell/js ion/bug1122401.js
[2|0|0|0]  33% =================>                                     |   0.3s
/home/heiher/git/loongson/gecko-dev/js/src/jit-test/tests/ion/bug1122401.js:5:0 Error: Assertion failed: got 0, expected 1
Exit code: 3
FAIL - ion/bug1122401.js
[2|1|0|0]  50% ==========================>                            |   0.3s
/home/heiher/git/loongson/gecko-dev/js/src/jit-test/tests/ion/bug1122401.js:5:0 Error: Assertion failed: got 0, expected 1
Exit code: 3
FAIL - ion/bug1122401.js
[4|2|0|0] 100% ======================================================>|   0.6s
FAILURES:
    /home/heiher/git/loongson/gecko-dev/js/src/mips/js/src/shell/js -f /home/heiher/git/loongson/gecko-dev/js/src/jit-test/lib/prolog.js --js-cache /home/heiher/git/loongson/gecko-dev/js/src/jit-test/.js-cache --ion-extra-checks --ion-offthread-compile=off --ion-check-range-analysis --no-threads --ion-eager --no-sse3 -e "const platform='linux2'; const libdir='/home/heiher/git/loongson/gecko-dev/js/src/jit-test/lib/'; const scriptdir='/home/heiher/git/loongson/gecko-dev/js/src/jit-test/tests/ion/'" -f /home/heiher/git/loongson/gecko-dev/js/src/jit-test/tests/ion/bug1122401.js
    /home/heiher/git/loongson/gecko-dev/js/src/mips/js/src/shell/js -f /home/heiher/git/loongson/gecko-dev/js/src/jit-test/lib/prolog.js --js-cache /home/heiher/git/loongson/gecko-dev/js/src/jit-test/.js-cache --ion-eager --ion-offthread-compile=off -e "const platform='linux2'; const libdir='/home/heiher/git/loongson/gecko-dev/js/src/jit-test/lib/'; const scriptdir='/home/heiher/git/loongson/gecko-dev/js/src/jit-test/tests/ion/'" -f /home/heiher/git/loongson/gecko-dev/js/src/jit-test/tests/ion/bug1122401.js
TIMEOUTS:
Attachment #8583843 - Flags: review?(branislav.rankov)
we should handle div remainder, if it > 0, the operands must be as double type. So bailout it.
Comment on attachment 8583843 [details] [diff] [review]
IonMonkey-MIPS-Fix-UDiv-and-UMod-for-double-and-merg.patch

Review of attachment 8583843 [details] [diff] [review]:
-----------------------------------------------------------------

Good catch. Thanks.
Attachment #8583843 - Flags: review?(branislav.rankov) → review+
Keywords: checkin-needed
https://hg.mozilla.org/mozilla-central/rev/1338e3ef4d6e
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla39
You need to log in before you can comment on or make changes to this bug.