Bug 1147908 - IonMonkey: MIPS: Fix UDiv and UMod for double and merge them. r=rankov

--HG--
extra : rebase_source : 7b95e47ae2a14e8722e614fa1690bff407b661ad